erDiagram
    categories ||--o{ products : "category_id"
    products ||--o{ product_sizes : "product_id"
    products ||--o{ product_temperature_types : "product_id"
    sizes ||--o{ product_sizes : "size_id"
    temperature_types ||--o{ product_temperature_types : "temperature_type_id"

    products {
        integer product_id PK "商品ID"
        text product_name "商品名"
        integer category_id FK "カテゴリID"
        text description "説明"
        boolean is_active "有効フラグ"
        timestamptz created_at "作成日時"
        timestamptz updated_at "更新日時"
        varchar product_image_path "商品画像パス"
        integer display_order "表示順"
        sale_type_enum sale_type "販売タイプ"
    }

    categories {
        integer category_id PK "カテゴリID"
        text category_name "カテゴリ名"
        text description "説明"
        timestamptz created_at "作成日時"
        timestamptz updated_at "更新日時"
    }

    sizes {
        integer size_id PK "サイズID"
        text size_name "サイズ名"
        text size_description "サイズ説明"
    }

    temperature_types {
        integer temperature_type_id PK "温度タイプID"
        text type_name "タイプ名"
    }

    product_sizes {
        integer product_id FK "商品ID"
        integer size_id FK "サイズID"
        integer price "価格"
    }

    product_temperature_types {
        integer product_id FK "商品ID"
        integer temperature_type_id FK "温度タイプID"
    }
